# HUK_Technical_Challenge

./: Dockerfile  README.md  app.py  data_exploration.ipynb  main.py  pyproject.toml
code/: main.py
models/: lgbm.pkl
